# Data-Pilot

./: .dockerignore  .gitignore  AUTHENTICATION_INTEGRATION.md  COPYRIGHT_NOTICE.md  DATA_PILOT_PIPELINE_DOCUMENTATION.md  Dockerfile  KULLANIM_KILAVUZU.md  README.md  docker-compose.yml  giriş.txt  pyproject.toml  requirements.txt  run.bat  run.sh  run_tests.bat  run_tests.sh  test_endpoints.py
.ayken/specs/application-cleanup-and-simplification/: requirements.md  tasks.md  verification_checklist.md
.ayken/specs/test-infrastructure-fixes/: design.md  requirements.md  tasks.md
.ayken/specs/veri-pipeline-dashboard/: design.md  requirements.md  tasks.md
.kiro/specs/application-cleanup-and-simplification/: design.md  tasks.md  (+1 more)
app/: config.py  dependencies.py  init_db.py  main.py
app/core/: celery_worker.py  database.py  error_handlers.py  security.py
app/crud/: user_crud.py
app/models/: __init__.py  base.py  data.py  user.py
app/routers/: __init__.py  auth.py  data.py  users.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py
pipeline-dashboard/: README.md  SECURITY.md
pipeline-dashboard/backend/: main.py  requirements.txt
pipeline-dashboard/frontend/: .env.example  .eslintrc.cjs  .prettierignore  .prettierrc  AI_PROMPT_EXECUTION.md  AI_PROMPT_INTEGRATION.md  README.md  ROLLBACK_SYSTEM.md  SCHEMA_VALIDATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js  vitest.config.js
tests/: README.md  test_auth.py  test_data.py  test_e2e.py  test_integration.py  test_system_integration.py
(+74 files in other folders)
